--- a/app/client/partner.html
+++ b/app/client/partner.html
@@ -1,7 +1,7 @@
 <div ng-controller="PartnerApplicationController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">{{"Become a Partner"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading">{{"Become a Partner"|translate}}</h4>
         </div>
 
         <div class="panel-body">
