--- a/app/admin/domain-summary.html
+++ b/app/admin/domain-summary.html
@@ -1,6 +1,6 @@
 <div ng-controller="SystemDomainSummaryController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">Domain Summary</strong></div>
+        <div class="panel-heading"><h4 class="heading">Domain Summary</h4></div>
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
