--- a/app/admin/domain.html
+++ b/app/admin/domain.html
@@ -1,10 +1,10 @@
 <div ng-controller="SystemAdminDomainController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">
+        <div class="panel-heading">
+            <h4 class="heading">
                 <span ng-if="entity.id">{{entity.label}}</span>
                 <span ng-if="!entity.id">{{"New Domain"|translate}}</span>
-            </strong>
+            </h4>
         </div>
 
         <div class="panel-body">
