--- a/app/admin/configurations.html
+++ b/app/admin/configurations.html
@@ -1,6 +1,6 @@
 <div ng-controller="SystemAdminConfigurationsController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'Configurations'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'Configurations'|translate}}</h4></div>
         <table class="table table-striped table-hover table-responsive">
             <thead ng-show="entities.length">
             <tr>
