--- a/app/admin/domains.html
+++ b/app/admin/domains.html
@@ -1,6 +1,6 @@
 <div ng-controller="SystemAdminDomainsController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'Domains'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'Domains'|translate}}</h4></div>
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
