--- a/app/admin/scheduled-jobs.html
+++ b/app/admin/scheduled-jobs.html
@@ -1,6 +1,6 @@
 <div ng-controller="SchedulesController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'Scheduled Jobs'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'Scheduled Jobs'|translate}}</h4></div>
 
         <table class="table table-striped table-hover table-responsive">
             <thead>
