--- a/app/client/client-validation.html
+++ b/app/client/client-validation.html
@@ -1,7 +1,7 @@
 <div ng-controller="ClientValidationController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">{{"Client Validation"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading">{{"Client Validation"|translate}}</h4>
         </div>
 
         <div class="panel-body">
@@ -10,7 +10,7 @@
                     <div class="col-sm-2">
                         <label class="control-label">{{"ID"|translate}}*</label>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-10">
                         <input ng-model="entity.id" class="form-control" name="id" only-digits
                                id="id" ng-trim="true" required>
                     </div>
@@ -20,7 +20,7 @@
                     <div class="col-sm-2">
                         <label class="control-label" for="name">{{"Name"|translate}}*</label>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-10">
                         <input ng-model="entity.name" class="form-control" name="name" minlength="1" maxlength="20"
                                id="name" required>
                     </div>
