--- a/app/client/fund/deposit-demo-account.html
+++ b/app/client/fund/deposit-demo-account.html
@@ -1,13 +1,13 @@
 <div ng-controller="FundDemoAccountController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'Fund Demo Account'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'Fund Demo Account'|translate}}</h4></div>
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="save()">
                 <div class="row form-group">
                     <div class="col-sm-2">
                         <label class="control-label">{{"Account"|translate}}</label>
                     </div>
-                    <div class="col-sm-4">{{entity.login}}</div>
+                    <div class="col-sm-10">{{entity.login}}</div>
                 </div>
 
                 <div class="row form-group">
@@ -15,7 +15,7 @@
                         <label class="control-label">{{"Amount"|translate}}*</label>
                     </div>
 
-                    <div class="col-sm-6">
+                    <div class="col-sm-10">
                         <div class="btn-group">
                             <label class="btn btn-success" ng-model="entity.amount" uib-btn-radio="200">$200</label>
                             <label class="btn btn-success" ng-model="entity.amount" uib-btn-radio="500">$500</label>
