--- a/app/client/account/deposit.html
+++ b/app/client/account/deposit.html
@@ -1,7 +1,7 @@
 <div>
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">{{"Deposit"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading">{{"Deposit"|translate}}</h4>
         </div>
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="save()">
