--- a/app/client/admin/reward-event-clients.html
+++ b/app/client/admin/reward-event-clients.html
@@ -1,6 +1,6 @@
 <div ng-controller="RewardEventClientsController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{entity.name}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{entity.name}}</h4></div>
         <div class="panel-body">
             <button type="button" class="btn btn-warning col-xs-8 col-xs-offset-2 col-sm-offset-0 col-sm-2"
                     ng-click="back()">
