--- a/app/client/admin/reward-events.html
+++ b/app/client/admin/reward-events.html
@@ -1,6 +1,6 @@
 <div ng-controller="RewardEventsController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'Reward Events'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'Reward Events'|translate}}</h4></div>
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="search()">
                 <div class="row">
@@ -17,7 +17,7 @@
                                            datepicker-options="dateOptions"/>
                                     <span class="input-group-btn">
                                 <button type="button" class="btn btn-default"
-                                        ng-click="startDate.opened=true"><i class="glyphicon glyphicon-calendar"></i>
+                                        ng-click="startDate.opened=true"><img src="../../../images/icon-calender-sml.png" />
                                 </button>
                             </span>
                                 </p>
@@ -36,7 +36,7 @@
                                            ng-model="searchParams.endDate" is-open="endDate.opened" required
                                            datepicker-options="dateOptions"/>
                                     <span class="input-group-btn">
-                                <button type="button" class="btn btn-default" ng-click="endDate.opened=true"><i class="glyphicon glyphicon-calendar"></i></button>
+                                <button type="button" class="btn btn-default" ng-click="endDate.opened=true"><img src="../../../images/icon-calender-sml.png" /></button>
                             </span>
                                 </p>
                             </div>
@@ -46,7 +46,7 @@
 
                 <div class="row">
                     <div class="col-sm-12">
-                        <button class="btn btn-primary" type="submit" ng-disabled="editForm.$invalid">
+                        <button class="cbtn-search" type="submit" ng-disabled="editForm.$invalid">
                             <i class="fa fa-search" aria-hidden="true"></i> {{'Search'|translate}}
                         </button>
                     </div>
