--- a/app/client/admin/reward-event.html
+++ b/app/client/admin/reward-event.html
@@ -1,8 +1,8 @@
 <div ng-controller="RewardEventController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading" ng-if="entity.id">{{entity.name}}</strong>
-            <strong class="heading" ng-if="!entity.id">{{"New Reward Event"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading" ng-if="entity.id">{{entity.name}}</h4>
+            <h4 class="heading" ng-if="!entity.id">{{"New Reward Event"|translate}}</h4>
         </div>
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="save()">
@@ -10,7 +10,7 @@
                     <div class="col-sm-2">
                         <label class="control-label" for="label">{{"Name"|translate}}*</label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-10">
                         <input id="label" name="label" class="form-control" ng-model="entity.name" ng-trim="true" required/>
                     </div>
                 </div>
@@ -19,12 +19,12 @@
                     <div class="col-sm-2">
                         <label class="control-label" for="startDate">{{"Start Date"|translate}}*</label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-10">
                         <p class="input-group">
                             <input id="startDate" name="startDate" type="text" class="form-control" uib-datepicker-popup
                                    ng-model="entity.startDate" is-open="startDate.opened" datepicker-options="dateOptions" ng-required="true" />
                             <span class="input-group-btn">
-                                <button type="button" class="btn btn-default" ng-click="startDate.opened=true"><i class="glyphicon glyphicon-calendar"></i></button>
+                                <button type="button" class="btn btn-default" ng-click="startDate.opened=true"><img src="../../../images/icon-calender-sml.png" /></button>
                             </span>
                         </p>
                     </div>
@@ -34,12 +34,12 @@
                     <div class="col-sm-2">
                         <label class="control-label" for="endDate">{{"End Date"|translate}}*</label>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-10">
                         <p class="input-group">
                             <input id="endDate" name="endDate" type="text" class="form-control" uib-datepicker-popup
                                    ng-model="entity.endDate" is-open="endDate.opened" datepicker-options="dateOptions" ng-required="true" />
                             <span class="input-group-btn">
-                                <button type="button" class="btn btn-default" ng-click="endDate.opened=true"><i class="glyphicon glyphicon-calendar"></i></button>
+                                <button type="button" class="btn btn-default" ng-click="endDate.opened=true"><img src="../../../images/icon-calender-sml.png" /></button>
                             </span>
                         </p>
                     </div>
