--- a/app/user/admin/clients.html
+++ b/app/user/admin/clients.html
@@ -34,7 +34,7 @@
 
                 <div class="row">
                     <div class="col-sm-12">
-                        <button class="btn btn-primary" type="submit" ng-disabled="editForm.$invalid">
+                        <button class="cbtn-search" type="submit" ng-disabled="editForm.$invalid">
                             <i class="fa fa-search" aria-hidden="true"></i> {{'Search'|translate}}
                         </button>
                     </div>
