--- a/app/user/team/team.html
+++ b/app/user/team/team.html
@@ -1,8 +1,8 @@
 <div ng-controller="TeamAdminCtrl">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading" ng-if="entity.id">{{entity.name}}</strong>
-            <strong class="heading" ng-if="!entity.id">{{"New Team"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading" ng-if="entity.id">{{entity.name}}</h4>
+            <h4 class="heading" ng-if="!entity.id">{{"New Team"|translate}}</h4>
         </div>
 
         <div class="panel-body">
@@ -14,7 +14,7 @@
                             <div class="col-sm-2">
                                 <label class="control-label" for="name">{{"Name"|translate}}*</label>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-sm-10">
                                 <input id="name" name="name" class="form-control" required ng-model="entity.name"/>
                             </div>
                         </div>
@@ -23,7 +23,7 @@
                             <div class="col-sm-2">
                                 <label class="control-label" for="head">{{"Team Leader"|translate}}*</label>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-sm-10">
                                 <select name="head" id="head" class="form-control" required
                                         ng-options="k.label for k in entity.$users"
                                         ng-model="entity.head">
@@ -35,7 +35,7 @@
                     <uib-tab heading='{{"Team Members"|translate}}' disable="editForm.$invalid">
                         <p class="spacer"></p>
                         <div class="row">
-                            <div class="col-sm-6">
+                            <div class="col-sm-12">
                                 <table class="table table-striped table-hover table-responsive">
                                     <thead>
                                     <tr>
