--- a/app/user/admin/agents.html
+++ b/app/user/admin/agents.html
@@ -43,12 +43,14 @@
         </div>
 
         <div class="panel-body row">
+            <div class="pagi-wrap">
             <div class="col-sm-12" ng-show="pageParams.totalItems>pageParams.itemsPerPage">
                 <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
                     items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
                     class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
-                    first-text="<<" last-text=">>" next-text=">" previous-text="<">
+                    first-text="<<" last-text=">>" next-text="NEXT >" previous-text="< PREV">
                 </ul>
+            </div>
             </div>
 
             <div class="col-sm-12">
