--- a/app/user/admin/work-group.html
+++ b/app/user/admin/work-group.html
@@ -1,6 +1,6 @@
 <div ng-controller="WorkGroupAdminController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
+        <div class="panel-heading">
             <h4 class="heading" ng-if="entity.id">{{entity.name}}</h4>
             <h4 class="heading" ng-if="!entity.id">{{"New Work Group"|translate}}</h4>
         </div>
