--- a/app/user/common/work-notes.html
+++ b/app/user/common/work-notes.html
@@ -113,7 +113,7 @@
                 <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
                     items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
                     class="pagination-sm" boundary-links="true" ng-change="search()"
-                    first-text="<<" last-text=">>" next-text=">" previous-text="<">
+                    first-text="<<" last-text=">>" next-text="NEXT >" previous-text="< PREV">
                 </ul>
             </div>
             </div>
@@ -188,7 +188,7 @@
                     <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
                         items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
                         class="pagination-sm" boundary-links="true" ng-change="search()"
-                        first-text="<<" last-text=">>" next-text=">" previous-text="<">
+                        first-text="<<" last-text=">>" next-text="NEXT >" previous-text="< PREV">
                     </ul>
                 </div>
             </div>
