--- a/app/agent/management/accounts.html
+++ b/app/agent/management/accounts.html
@@ -1,6 +1,6 @@
 <div ng-controller="AgentAccountSummaryController">
     <div class="panel panel-info caccounts">
-        <div class="panel-heading text-center">
+        <div class="panel-heading">
             <h4 class="panel-title">{{'Client Accounts'|translate}}</h4>
         </div>
 
