--- a/app/agent/management/activities.html
+++ b/app/agent/management/activities.html
@@ -35,7 +35,7 @@
                     <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
                         items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
                         class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
-                        first-text="<<" last-text=">>" next-text=">" previous-text="<">
+                        first-text="<<" last-text=">>" next-text="NEXT >" previous-text="< PREV">
                     </ul>
                 </div>
             </div>
@@ -100,7 +100,7 @@
                     <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
                         items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
                         class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
-                        first-text="<<" last-text=">>" next-text=">" previous-text="<">
+                        first-text="<<" last-text=">>" next-text="NEXT >" previous-text="< PREV">
                     </ul>
                 </div>
             </div>
