--- a/app/agent/management/ib-accounts.html
+++ b/app/agent/management/ib-accounts.html
@@ -8,7 +8,7 @@
                     <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
                         items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
                         class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
-                        first-text="<<" last-text=">>" next-text=">" previous-text="<">
+                        first-text="<<" last-text=">>" next-text="NEXT >" previous-text="< PREV">
                     </ul>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                     <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
                         items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
                         class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
-                        first-text="<<" last-text=">>" next-text=">" previous-text="<">
+                        first-text="<<" last-text=">>" next-text="NEXT >" previous-text="< PREV">
                     </ul>
                 </div>
             </div>
