--- a/app/user/clientScreen/client.html
+++ b/app/user/clientScreen/client.html
@@ -1,7 +1,7 @@
 <div ng-controller="ClientHomeController">
     <div class="panel"
          ng-class="{'panel-success': client.clientRole!=='Client','panel-info': client.clientRole=='Client'}">
-        <div class="panel-heading text-center">
+        <div class="panel-heading">
             <h4 class="heading">{{client.label}}</h4>
         </div>
 
