--- a/app/system/profile.html
+++ b/app/system/profile.html
@@ -1,6 +1,6 @@
 <div ng-controller="CommonProfileController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
+        <div class="panel-heading">
             <h4 class="heading">{{"My Profile"|translate}}</h4>
         </div>
         <div class="panel-body">
