--- a/app/client/homeScreen/summary.html
+++ b/app/client/homeScreen/summary.html
@@ -1,6 +1,6 @@
 <div ng-controller="ClientAccountSummaryController">
     <div class="panel panel-primary">
-        <div class="panel-heading text-center">
+        <div class="panel-heading">
             <h4 class="panel-title">{{'Trading Accounts'|translate}}</h4>
         </div>
         <table class="table table-striped table-hover table-responsive">
@@ -52,7 +52,7 @@
     </div>
 
     <div class="panel panel-primary" style="margin-bottom:5px">
-        <div class="panel-heading text-center">
+        <div class="panel-heading">
             <h4 class="panel-title">{{'Demo Accounts'|translate}}</h4>
         </div>
         <table class="table table-striped table-hover table-responsive">
