--- a/app/broker/management/cash-activities.html
+++ b/app/broker/management/cash-activities.html
@@ -1,7 +1,7 @@
 <div ng-controller="CashActivityController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">{{"Cash Activities"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading">{{"Cash Activities"|translate}}</h4>
         </div>
 
         <div class="panel-body">
@@ -14,7 +14,7 @@
                     <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
                         items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
                         class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
-                        first-text="<<" last-text=">>" next-text=">" previous-text="<">
+                        first-text="<<" last-text=">>" next-text="NEXT >" previous-text="< PREV">
                     </ul>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                     <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
                         items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
                         class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
-                        first-text="<<" last-text=">>" next-text=">" previous-text="<">
+                        first-text="<<" last-text=">>" next-text="NEXT >" previous-text="< PREV">
                     </ul>
                 </div>
             </div>
