--- a/app/broker/jobs.html
+++ b/app/broker/jobs.html
@@ -1,5 +1,5 @@
 <div class="panel panel-info">
-    <div class="panel-heading text-center">
+    <div class="panel-heading">
         <h4 class="heading">{{"Jobs"|translate}}</h4>
     </div>
 </div>
