--- a/app/admin/configurations.html
+++ b/app/admin/configurations.html
@@ -1,6 +1,7 @@
 <div ng-controller="SystemAdminConfigurationsController">
     <div class="panel panel-info">
         <div class="panel-heading"><h4 class="heading">{{'Configurations'|translate}}</h4></div>
+        <div class="tbl-wrap">
         <table class="table table-striped table-hover table-responsive">
             <thead ng-show="entities.length">
             <tr>
@@ -31,5 +32,6 @@
             </tr>
             </tfoot>
         </table>
+        </div>
     </div>
 </div>
