--- a/app/admin/domain-summary.html
+++ b/app/admin/domain-summary.html
@@ -1,6 +1,7 @@
 <div ng-controller="SystemDomainSummaryController">
     <div class="panel panel-info">
         <div class="panel-heading"><h4 class="heading">Domain Summary</h4></div>
+        <div class="tbl-wrap">
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
@@ -16,5 +17,6 @@
                 <td>{{entity.userCount|number}}</td>
             </tr>
         </table>
+        </div>
     </div>
 </div>
