--- a/app/admin/domains.html
+++ b/app/admin/domains.html
@@ -1,6 +1,7 @@
 <div ng-controller="SystemAdminDomainsController">
     <div class="panel panel-info">
         <div class="panel-heading"><h4 class="heading">{{'Domains'|translate}}</h4></div>
+        <div class="tbl-wrap">
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
@@ -47,5 +48,6 @@
             </tr>
             </tfoot>
         </table>
+        </div>
     </div>
 </div>
