--- a/app/admin/scheduled-jobs.html
+++ b/app/admin/scheduled-jobs.html
@@ -1,7 +1,7 @@
 <div ng-controller="SchedulesController">
     <div class="panel panel-info">
         <div class="panel-heading"><h4 class="heading">{{'Scheduled Jobs'|translate}}</h4></div>
-
+        <div class="tbl-wrap">
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
@@ -46,5 +46,6 @@
             </tr>
             </tfoot>
         </table>
+        </div>
     </div>
 </div>
