--- a/app/agent/management/activities.html
+++ b/app/agent/management/activities.html
@@ -8,6 +8,7 @@
         <div class="space30"></div>
         <div class="panel-body row">
             <div class="col-sm-12" ng-if="accounts.length && summaryList.length">
+                <div class="tbl-wrap">
                 <table class="table table-bordered table-responsive">
                     <thead>
                     <tr class="success">
@@ -28,6 +29,7 @@
                     </tr>
                     </tbody>
                 </table>
+                </div>
             </div>
 
             <div class="col-sm-12" ng-show="pageParams.totalItems>pageParams.itemsPerPage">
@@ -41,6 +43,7 @@
             </div>
 
             <div class="col-sm-12">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                     <tr>
@@ -93,6 +96,7 @@
                     </td>
                     </tfoot>
                 </table>
+            </div>
             </div>
 
             <div class="col-sm-12" ng-show="pageParams.totalItems>pageParams.itemsPerPage">
