--- a/app/agent/management/ib-accounts.html
+++ b/app/agent/management/ib-accounts.html
@@ -13,6 +13,7 @@
                 </div>
             </div>
             <div class="col-sm-12">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                     <tr>
@@ -110,6 +111,7 @@
                     </td>
                     </tfoot>
                 </table>
+                </div>
             </div>
 
             <div class="pagi-wrap">
