--- a/app/agent/report/agent-cash-activity-report.html
+++ b/app/agent/report/agent-cash-activity-report.html
@@ -55,6 +55,7 @@
 
         <div class="panel-body row ">
             <div class="col-sm-12" ng-if="accounts.length && summaryList.length">
+                <div class="tbl-wrap">
                 <table class="table table-bordered table-responsive">
                     <thead>
                     <tr class="success">
@@ -75,6 +76,7 @@
                     </tr>
                     </tbody>
                 </table>
+                </div>
             </div>
             <div class="pagi-wrap">
             <div class="col-sm-12" ng-show="pageParams.totalItems>pageParams.itemsPerPage">
@@ -86,6 +88,7 @@
             </div>
             </div>
             <div class="col-sm-12">
+                <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                     <tr>
@@ -113,6 +116,7 @@
                     </td>
                     </tfoot>
                 </table>
+                </div>
             </div>
 
             <div class="pagi-wrap">
